fix: game details spacing issue

--- a/src/styles/gif.css
+++ b/src/styles/gif.css
@@ -2,7 +2,7 @@
 .giffy-reverse {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
@@ -13,7 +13,7 @@
 }
 
 .giffy .giffy-child-two {
-  margin-right: 5rem;
+  margin: 0 5rem;
   text-align: center;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .giffy-reverse .giffy-child-two {
-  margin-left: 5rem;
+  margin: 0 5rem;
   text-align: center;
 }
 
@@ -38,6 +38,6 @@
   }
   .giffy .giffy-child-two,
   .giffy-reverse .giffy-child-two {
-    margin: 0rem;
+    margin: 0 2rem;
   }
 }
